--- a/root/package.json
+++ b/root/package.json
@@ -11,9 +11,13 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.0",
-    "grunt-shell": "0.1.x",
-    "temporary": "0.0.5",
-    "grunt-jasmine-task": "~0.2.3"
+    "grunt-cli": "0.1.x",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt": "0.4.x",{% if (min_concat) { %}
+    "grunt-contrib-concat": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.0",{% } %}
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-shell": "0.2.x",
+    "temporary": "0.0.5"
   }
 }
